# bord4-analysis-templates

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: master.yml
git/: pre-commit
src/dataframe/: clean_column_headers.py  datetime.py  numbers.py  regions.py
src/extra/: visvegen.py
src/integration/: client.py
src/log/: __init__.py  ansi.py
src/utils/: s3.py  spreadsheet.py
src/viz/: pyplot.py
templates/: eda-linechart-array.ipynb  eda-nvdb.ipynb  eda-ssb.ipynb  etl-einnsyn.ipynb  etl-gis.ipynb  etl-gsheet.ipynb  etl-nvdb.ipynb  etl-read-csv.ipynb  etl-screen-scraping.ipynb  etl_ssb_api.py  generic-header.ipynb  publish-datawrapper-mm.ipynb
