[tool.poetry]
name = "bord4-analysis-templates"
version = "0.1.0"
description = "Project used to hold templates for the bord4 analysis cookiecutter"
authors = ["Lasse Lambrechts <lasse.lambrechts@bt.no>"]
homepage = "https://github.com/BergensTidende/bord4-analysis-templates"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.37"
geopandas = "^0.12.2"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
plotly = "^5.11.0"
pyjstat = "^2.3.0"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
scikit-learn = "^1.2.0"
pakkenellik = {path = "../pakkenellik", develop = true}

[tool.poetry.group.lint.dependencies]
isort = "^5.11.4"
black = {extras = ["jupyter"], version = "^22.12.0"}
flake8 = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.7"

[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
